--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ footer {
 }
 
 #main {
-    background-color: #c7254e;
+    background-color: lightgreen;
     width: 83%;
     float: right;
     height: 100vh;
