--- a/sign_in.css
+++ b/sign_in.css
@@ -13,9 +13,6 @@ body, html {
 .card-container.card {
     max-width: 350px;
     padding: 40px 40px;
-    margin-left: 37%;
-    margin-top: 10%;
-    position: fixed;
 }
 
 .btn {
@@ -141,4 +138,9 @@ body, html {
 .forgot-password:active,
 .forgot-password:focus{
     color: rgb(12, 97, 33);
+}
+
+#stuff {
+    margin-left: 45%;
+    margin-top: 10%;
 }
